# SmartHomeRaspbPi3

./: .firebaserc  .gitignore  LICENSE  README.md  build.gradle  debug.keystore  gradle.properties  lint.xml  settings.gradle  versions.gradle
common/: build.gradle
common/src/main/: AndroidManifest.xml
functions/: index.js  package.json
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle
mobile/debug/: output-metadata.json
mobile/src/main/: AndroidManifest.xml
mobile/src/main/res/anim/: fade_in.xml  fade_out.xml
mobile/src/main/res/color/: navigation_item_color.xml
mobile/src/main/res/drawable/: auto_complete_text_view_color_selector.xml  ic_baseline_add_box_24.xml  ic_baseline_other_houses_24.xml  ic_baseline_view_headline_24.xml  ic_block_24dp.xml  ic_done.xml  ic_edit.xml  ic_filter_list.xml  ic_menu.xml  ic_outline_label_24.xml  ic_plus.xml  ic_statistics.xml
mobile/src/main/res/layout/: activity_home.xml  activity_login.xml  activity_mobile.xml  activity_wifi.xml  fragment_add_edit_hw_unit.xml  fragment_add_storage_home_unit.xml  fragment_home_unit_detail.xml  fragment_home_unit_detail_base.xml  fragment_home_unit_detail_unit_list_item.xml  fragment_home_unit_detail_unit_list_item_add.xml  fragment_home_unit_detail_unit_task_list_item.xml  fragment_hw_unit_list.xml  (+36 more)
things/: build.gradle
things/src/main/: AndroidManifest.xml
things/src/main/cpp/: CMakeLists.txt  native-bsec.cpp
things/src/main/cpp/include/: bsec_integration.c  bsec_integration.h
things/src/main/cpp/libs/bsec/armeabi-v7a/: bsec_datatypes.h  bsec_interface.h
(+438 files in other folders)
